--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,6 +59,7 @@
         "tsx": "never"
       }
     ],
+    "react/no-danger": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "off",
